# securescout-

./: .gitignore  README.md  demo.ps1  demo.sh  package-lock.json  package.json  pyproject.toml  render.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  jest.config.js  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: index.ts
apps/api/src/config/: database.ts  env.ts  redis.ts
apps/api/src/middleware/: auth.ts  errorHandler.ts  validate.ts
apps/api/src/routes/: auth.ts  health.ts  reports.ts  scans.ts  users.ts
apps/api/src/services/: audit.service.ts  auth.service.ts  jwt.service.ts  scan.service.ts
apps/api/src/types/: hpp.d.ts
apps/api/src/utils/: errors.ts  logger.ts
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  store.ts  (+1 more)
deck/: SecureScout_PSB_Hackathon_2026.pptx  build_deck.py
docs/: ARCHITECTURE.md
infra/scripts/: dev.sh
sample_projects/low_risk_app/: app.py  requirements.txt
sample_projects/moderate_app/: app.py  requirements.txt
securescout/: autofix.py  codefix.py  engine.py  reports.py
securescout/cli/: remediate.py  scan.py
securescout/detectors/: config_detector.py  crypto_detector.py  cve_detector.py  injection_detector.py  secret_detector.py
tests/integration/: auth.test.ts
tests/unit/: jwt.test.ts  risk.test.ts
vulnerable_bank_app/: requirements.txt
vulnerable_bank_app/config/: settings.yaml
vulnerable_bank_app/src/: banking_app.py
(+19 files in other folders)
